fix(intent-pipeline): wire intent output topics to downstream consumers [OMN-2938]
Three IntentTopic output topics defined in OMN-2348 had zero subscribers in any
contract.yaml across the platform. This commit wires each topic to its natural
downstream consumer:

- onex.evt.intent.drift.detected.v1 → node_intelligence_orchestrator
  (orchestrator reacts to drift signals, routes alerts, may trigger model updates)

- onex.evt.intent.outcome.labeled.v1 → node_intelligence_reducer
  (reducer drives FSM state transitions for intent tracking from session outcomes;
   adds event_bus section to reducer contract — previously absent)

- onex.evt.intent.pattern.promoted.v1 → node_pattern_projection_effect
  (pattern projection rebuilds on intent-derived pattern promotion to refresh
   downstream pattern caches)

Also fixes ModelIntentClassifiedEnvelope docstring namespace drift: the class
docstring incorrectly referenced onex.evt.intent.classified.v1 instead of the
actual produced topic onex.evt.omniintelligence.intent-classified.v1.

--- a/src/omniintelligence/nodes/node_intelligence_orchestrator/contract.yaml
+++ b/src/omniintelligence/nodes/node_intelligence_orchestrator/contract.yaml
@@ -143,6 +143,8 @@ consumed_events:
     event_type: "PatternLearningRequested"
   - topic: "onex.cmd.omniintelligence.quality-assessment.v1"
     event_type: "QualityAssessmentRequested"
+  - topic: "onex.evt.intent.drift.detected.v1"
+    event_type: "IntentDriftDetected"
 # Published Events
 # ================
 published_events:
@@ -218,6 +220,7 @@ event_bus:
     - "onex.cmd.omniintelligence.document-ingestion.v1"
     - "onex.cmd.omniintelligence.pattern-learning.v1"
     - "onex.cmd.omniintelligence.quality-assessment.v1"
+    - "onex.evt.intent.drift.detected.v1"
 
   publish_topics:
     - "onex.evt.omniintelligence.code-analysis-completed.v1"
@@ -242,6 +245,11 @@ event_bus:
     "onex.cmd.omniintelligence.quality-assessment.v1":
       schema_ref: "omniintelligence.nodes.node_intelligence_orchestrator.models.ModelOrchestratorInput"
       description: "Quality assessment operation requests"
+    "onex.evt.intent.drift.detected.v1":
+      schema_ref: "omniintelligence.models.events.model_intent_event_envelopes.ModelIntentDriftDetectedEnvelope"
+      description: "Intent drift signal from node_intent_drift_detect_compute. Orchestrator routes alerts
+        and may trigger model updates."
+      content_type: "application/json"
 
   publish_topic_metadata:
     "onex.evt.omniintelligence.code-analysis-completed.v1":
