--- a/src/omniintelligence/nodes/node_llm_routing_decision_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_llm_routing_decision_effect/contract.yaml
@@ -36,13 +36,11 @@ node_type: "EFFECT_GENERIC"
 
 # Description
 description: >
-  Effect node for processing LLM routing decision events from omniclaude's Bifrost LLM gateway.
-  Consumes onex.evt.omniclaude.llm-routing-decision.v1 events containing the full routing
-  decision metadata (selected agent, confidence, latency, model used, agreement with fuzzy
-  matching). Persists idempotent records to llm_routing_decisions table using
-  (session_id, correlation_id) as the composite idempotency key. Publishes
-  onex.evt.omniintelligence.llm-routing-decision-processed.v1 after successful processing.
-
+  Effect node for processing LLM routing decision events from omniclaude's Bifrost LLM gateway. Consumes
+  onex.evt.omniclaude.llm-routing-decision.v1 events containing the full routing decision metadata (selected
+  agent, confidence, latency, model used, agreement with fuzzy matching). Persists idempotent records
+  to llm_routing_decisions table using (session_id, correlation_id) as the composite idempotency key.
+  Publishes onex.evt.omniintelligence.llm-routing-decision-processed.v1 after successful processing. #magic___^_^___line
 # =============================================================================
 # I/O MODELS
 # =============================================================================
@@ -67,7 +65,8 @@ handler_routing:
         function: "process_llm_routing_decision"
         module: "omniintelligence.nodes.node_llm_routing_decision_effect.handlers.handler_llm_routing_decision"
         type: "async"
-      description: "Consume LLM routing decision event, upsert to llm_routing_decisions, publish processed event"
+      description: "Consume LLM routing decision event, upsert to llm_routing_decisions, publish processed
+        event"
       output_fields:
         - status
         - session_id
@@ -118,7 +117,8 @@ dependencies:
     type: "protocol"
     class_name: "ProtocolKafkaPublisher"
     module: "omniintelligence.protocols"
-    description: "Optional Kafka publisher for llm-routing-decision-processed events. Absent = graceful degradation"
+    description: "Optional Kafka publisher for llm-routing-decision-processed events. Absent = graceful
+      degradation"
     required: false
 
 # =============================================================================
@@ -181,10 +181,9 @@ idempotency:
   strategy: "event_id_tracking"
   hash_fields: ["session_id", "correlation_id"]
   description: >
-    Each LLM routing decision event is uniquely identified by (session_id, correlation_id).
-    Re-processing the same event is idempotent via ON CONFLICT (session_id, correlation_id)
-    DO UPDATE SET processed_at = EXCLUDED.processed_at. This handles at-least-once Kafka
-    delivery without creating duplicate rows.
+    Each LLM routing decision event is uniquely identified by (session_id, correlation_id). Re-processing
+    the same event is idempotent via ON CONFLICT (session_id, correlation_id) DO UPDATE SET processed_at
+    = EXCLUDED.processed_at. This handles at-least-once Kafka delivery without creating duplicate rows.
 
 # =============================================================================
 # CAPABILITIES
@@ -197,7 +196,8 @@ capabilities:
   - name: "event_publish"
     description: "Publish llm-routing-decision-processed events to Kafka (optional, graceful degradation)"
   - name: "model_analytics"
-    description: "Persist per-decision metadata (confidence, latency, agreement) for model performance analytics"
+    description: "Persist per-decision metadata (confidence, latency, agreement) for model performance
+      analytics"
 
 # =============================================================================
 # METADATA
