chore: remove internal IP references from .env.example
Replace 192.168.86.x IPs with localhost for Kafka and LLM endpoints.
Remove topology-specific server comments from public example config.

--- a/.env.example
+++ b/.env.example
@@ -38,15 +38,15 @@ POSTGRES_MAX_POOL_SIZE=10
 # =============================================================================
 # Kafka/Redpanda Event Bus Configuration
 # =============================================================================
-# Remote Redpanda server at 192.168.86.200
+# Kafka/Redpanda broker address.
 # Port 29092 is the EXTERNAL port for host machine access.
-# Docker services use port 9092 via hostname omninode-bridge-redpanda.
+# Docker services use port 9092 via the internal hostname.
 #
 # IMPORTANT: Use different configurations depending on context:
-#   - Host scripts/tests: 192.168.86.200:29092 (external port)
-#   - Docker services: omninode-bridge-redpanda:9092 (internal port via DNS)
+#   - Host scripts/tests: localhost:29092 (external port)
+#   - Docker services: omnibase-infra-redpanda:9092 (internal port via DNS)
 
-KAFKA_BOOTSTRAP_SERVERS=192.168.86.200:29092
+KAFKA_BOOTSTRAP_SERVERS=localhost:29092
 KAFKA_REQUEST_TIMEOUT_MS=30000
 KAFKA_MAX_BLOCK_MS=10000
 
@@ -68,20 +68,14 @@ QDRANT_URL=http://localhost:6333
 OPENAI_API_KEY=
 
 # =============================================================================
-# LLM Endpoints (Multi-Server Architecture)
+# LLM Endpoints
 # =============================================================================
-# See ~/.claude/CLAUDE.md for complete endpoint documentation.
-#
-# Linux GPU Server (192.168.86.201):
-#   - Port 8000: Qwen2.5-Coder-14B (code generation)
-#   - Port 8002: GTE-Qwen2 (embeddings)
-#
-# Mac Studio (192.168.86.200):
-#   - Port 8100: Qwen2.5-72B (documentation/analysis)
+# LLM inference endpoints. Override with the addresses appropriate for your
+# deployment environment.
 
-LLM_CODER_URL=http://192.168.86.201:8000
-LLM_EMBEDDING_URL=http://192.168.86.201:8002
-LLM_QWEN_72B_URL=http://192.168.86.200:8100
+LLM_CODER_URL=http://localhost:8000
+LLM_EMBEDDING_URL=http://localhost:8002
+LLM_QWEN_72B_URL=http://localhost:8100
 
 # =============================================================================
 # Feature Flags (Optional)
