--- a/src/omniintelligence/nodes/node_routing_feedback_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_routing_feedback_effect/contract.yaml
@@ -24,11 +24,11 @@ contract_name: "node_routing_feedback_effect"
 node_name: "node_routing_feedback_effect"
 contract_version:
   major: 1
-  minor: 0
+  minor: 1
   patch: 0
 node_version:
   major: 1
-  minor: 0
+  minor: 1
   patch: 0
 
 # Node type
@@ -36,18 +36,18 @@ node_type: "EFFECT_GENERIC"
 
 # Description
 description: >
-  Effect node for processing routing-outcome-raw events from omniclaude's session-end hook. Consumes onex.evt.omniclaude.routing-outcome-raw.v1
-  events containing raw observable session facts (injection_occurred, patterns_injected_count, agent_selected,
-  routing_confidence, duration_ms). Upserts idempotent records to routing_feedback_scores table using
-  session_id as the idempotency key. Publishes onex.evt.omniintelligence.routing-feedback-processed.v1
-  after successful processing. Replaces deprecated routing-feedback.v1 subscription (OMN-2935).
+  Effect node for processing routing-feedback events from omniclaude. Consumes onex.evt.omniclaude.routing-feedback.v1
+  events, filters on feedback_status ("produced" = persist to DB, "skipped" = log only). Upserts idempotent
+  records to routing_feedback_scores table using session_id as the idempotency key. Publishes onex.evt.omniintelligence.routing-feedback-processed.v1
+  after successful upsert. OMN-2622: Switched from routing-outcome-raw.v1 (deprecated); routing-feedback-skipped.v1
+  folded into routing-feedback.v1 via feedback_status field.
 # =============================================================================
 # I/O MODELS
 # =============================================================================
 input_model:
-  name: "ModelSessionRawOutcomePayload"
+  name: "ModelRoutingFeedbackPayload"
   module: "omniintelligence.nodes.node_routing_feedback_effect.models"
-  description: "Routing-outcome-raw event from omniclaude session-end hook (OMN-2935)"
+  description: "Routing-feedback event from omniclaude (OMN-2622: replaces routing-outcome-raw)"
 
 output_model:
   name: "ModelRoutingFeedbackResult"
@@ -65,17 +65,14 @@ handler_routing:
         function: "process_routing_feedback"
         module: "omniintelligence.nodes.node_routing_feedback_effect.handlers.handler_routing_feedback"
         type: "async"
-      description: "Consume routing-outcome-raw event, upsert to routing_feedback_scores, publish processed
-        event"
+      description: "Consume routing-feedback event, filter on feedback_status, upsert produced events
+        to routing_feedback_scores, publish processed event"
       output_fields:
         - status
         - session_id
-        - injection_occurred
-        - patterns_injected_count
-        - tool_calls_count
-        - duration_ms
-        - agent_selected
-        - routing_confidence
+        - outcome
+        - feedback_status
+        - skip_reason
         - was_upserted
         - processed_at
         - error_message
@@ -85,25 +82,21 @@ handler_routing:
 # =============================================================================
 io_operations:
   - operation: "process_routing_feedback"
-    description: "Process routing-outcome-raw event and upsert idempotent record to routing_feedback_scores"
+    description: "Process routing-feedback event: filter on feedback_status, upsert produced events, skip
+      skipped events"
     input_fields:
       - session_id
-      - injection_occurred
-      - patterns_injected_count
-      - tool_calls_count
-      - duration_ms
-      - agent_selected
-      - routing_confidence
+      - outcome
+      - feedback_status
+      - skip_reason
+      - correlation_id
       - emitted_at
     output_fields:
       - status
       - session_id
-      - injection_occurred
-      - patterns_injected_count
-      - tool_calls_count
-      - duration_ms
-      - agent_selected
-      - routing_confidence
+      - outcome
+      - feedback_status
+      - skip_reason
       - was_upserted
       - processed_at
       - error_message
@@ -162,16 +155,17 @@ event_bus:
     # NOTE: This topic uses 'evt' kind (not 'cmd') because it is produced by omniclaude.
     # The topic name is dictated by the producer; this is an intentional cross-system
     # exception to the convention that subscribe topics use 'cmd' kind.
-    # OMN-2935: Updated from routing-feedback.v1 to routing-outcome-raw.v1
-    - "onex.evt.omniclaude.routing-outcome-raw.v1"
+    # OMN-2622: Switched back from routing-outcome-raw.v1 (deprecated) to routing-feedback.v1.
+    # routing-feedback.v1 now carries both produced and skipped outcomes via feedback_status field.
+    - "onex.evt.omniclaude.routing-feedback.v1"
 
   publish_topics:
     - "onex.evt.omniintelligence.routing-feedback-processed.v1"
 
   subscribe_topic_metadata:
-    "onex.evt.omniclaude.routing-outcome-raw.v1":
-      schema_ref: "omniintelligence.nodes.node_routing_feedback_effect.models.ModelSessionRawOutcomePayload"
-      description: "Routing-outcome-raw events from omniclaude session-end hook (OMN-2935)"
+    "onex.evt.omniclaude.routing-feedback.v1":
+      schema_ref: "omniintelligence.nodes.node_routing_feedback_effect.models.ModelRoutingFeedbackPayload"
+      description: "Routing-feedback events from omniclaude (OMN-2622: includes feedback_status field)"
 
   publish_topic_metadata:
     "onex.evt.omniintelligence.routing-feedback-processed.v1":
@@ -186,10 +180,10 @@ idempotency:
   strategy: "event_id_tracking"
   hash_fields: ["session_id"]
   description: >
-    Each routing-outcome-raw event is uniquely identified by session_id. Re-processing the same event
-    is idempotent via ON CONFLICT (session_id) DO UPDATE SET all raw signal fields and processed_at. This
-    handles at-least-once Kafka delivery without creating duplicate rows. OMN-2935: correlation_id and
-    stage removed from idempotency key (no longer present in the producer payload).
+    Each routing-feedback event is uniquely identified by session_id. Re-processing the same event is
+    idempotent via ON CONFLICT (session_id) DO UPDATE SET outcome and processed_at. Skipped events (feedback_status
+    == "skipped") do not touch the DB at all. This handles at-least-once Kafka delivery without creating
+    duplicate rows. OMN-2622: Switched from routing-outcome-raw.v1 to routing-feedback.v1.
 
 # =============================================================================
 # CAPABILITIES
@@ -209,11 +203,11 @@ metadata:
   author: "OmniNode Team"
   license: "MIT"
   created: "2026-02-20"
-  updated: "2026-02-27"
+  updated: "2026-02-28"
   tags:
     - effect
     - routing-feedback
-    - routing-outcome-raw
+    - feedback-status
     - idempotent
     - postgresql
     - kafka
