chore(omniintelligence): add AI-slop checker (Phase 2 rollout)
Copy check_ai_slop.py from omnibase_core (OMN-2971), add pre-commit
hook and CI job for AI-slop pattern detection.

Part of OMN-2972 (Anti-AI-Slop Infrastructure Phase 2).

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -485,6 +485,13 @@ repos:
         # Note: The specific file pattern must NOT have .*\.py$ suffix as it's already complete
         files: ^(src/omniintelligence/(tools|utils|runtime)/.*\.py|tests/unit/tools/.*\.py|tests/unit/test_log_sanitizer\.py)$
         stages: [pre-push]
+      - id: check-ai-slop
+        name: Check for AI-slop patterns
+        language: system
+        entry: uv run python scripts/validation/check_ai_slop.py
+        types_or: [python, markdown]
+        pass_filenames: true
+        stages: [pre-commit]
 
 # Default stage for hooks (commit, not push)
 default_stages: [pre-commit]
